--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/katharynreed/doctor-finder#readme",
   "devDependencies": {
+    "bower": "^1.8.0",
     "bower-files": "^3.14.1",
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
@@ -26,9 +27,10 @@
     "gulp-jshint": "^2.0.4",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.1.0",
+    "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.4",
+    "uglify": "^0.1.5",
     "vinyl-source-stream": "^1.1.0"
   }
 }
